// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test sticky disabled with css sticky position 1`] = `
"<div class=\\"m-sticky\\" style=\\"z-index: 10;\\">
  <div class=\\"m-sticky__wrapper\\" style=\\"z-index: 10;\\">sticky content</div>
</div>"
`;

exports[`test sticky disabled with css sticky position 2`] = `
"<div class=\\"m-sticky\\" style=\\"z-index: 10;\\">
  <div class=\\"m-sticky__wrapper\\" style=\\"z-index: 10;\\">sticky content</div>
</div>"
`;

exports[`test sticky disabled without css sticky position 1`] = `
"<div class=\\"m-sticky\\" style=\\"z-index: 10;\\">
  <div class=\\"m-sticky__wrapper\\" style=\\"z-index: 10;\\">sticky content</div>
</div>"
`;

exports[`test sticky disabled without css sticky position 2`] = `
"<div class=\\"m-sticky\\" style=\\"z-index: 10;\\">
  <div class=\\"m-sticky__wrapper\\" style=\\"z-index: 10;\\">sticky content</div>
</div>"
`;

exports[`test sticky scrolling with css sticky position 1`] = `
"<div class=\\"m-sticky m-sticky--css-mode\\" style=\\"z-index: 10; top: 100px;\\">
  <div class=\\"m-sticky__wrapper\\" style=\\"z-index: 10;\\">sticky content</div>
</div>"
`;

exports[`test sticky scrolling with css sticky position 2`] = `
"<div class=\\"m-sticky m-sticky--css-mode\\" style=\\"z-index: 10; top: 100px;\\">
  <div class=\\"m-sticky__wrapper\\" style=\\"z-index: 10;\\">sticky content</div>
</div>"
`;

exports[`test sticky scrolling without css sticky position 1`] = `
"<div class=\\"m-sticky\\" style=\\"z-index: 10;\\">
  <div class=\\"m-sticky__wrapper\\" style=\\"z-index: 10;\\">sticky content</div>
</div>"
`;

exports[`test sticky scrolling without css sticky position 2`] = `
"<div class=\\"m-sticky\\" style=\\"z-index: 10; width: 0px; height: 0px;\\">
  <div class=\\"m-sticky__wrapper\\" style=\\"z-index: 10; position: fixed; width: 0px; height: 0px; top: 100px;\\">sticky content</div>
</div>"
`;

exports[`test sticky z-index 1`] = `
"<div class=\\"m-sticky\\" style=\\"z-index: 100;\\">
  <div class=\\"m-sticky__wrapper\\" style=\\"z-index: 100;\\"></div>
</div>"
`;
